<?xml version="1.0"?>
<package format="2">
  <name>rosmodem</name>
  <version>0.0.0</version>
  <description>Modem interfaces for ROS that make the modem invisible and handle message compression</description>
  <maintainer email="chris@cthierauf.com">cst (chris thierauf)</maintainer>
  <license>Apache2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <export>
  </export>
</package>
